objects/ssot__FlowRun__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompletedDateTime__c</fullName>
        <label>Completed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorDescriptionText__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorReason__c</fullName>
        <label>Error Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowRunStatus__c</fullName>
        <label>Flow Run Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowVersionId__c</fullName>
        <label>Flow Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowVersionOccurrenceId__c</fullName>
        <label>Flow Version Occurrence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Flow Run Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastExecutedElementId__c</fullName>
        <label>Last Executed Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryRecordId__c</fullName>
        <label>Primary Record Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDateTime__c</fullName>
        <label>Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StoppedReason__c</fullName>
        <label>Stopped Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761221557_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowRun_FlowVersionId_map_FlowVersio_rel</label>
        <referenceTo>ssot__FlowVersion__dlm</referenceTo>
        <relationshipLabel>FlowRun_FlowVersionId_map_FlowVersio_rel</relationshipLabel>
        <relationshipName>rel_1697761221557_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761221633_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowRun_PrimaryRecordId_map_Individu_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>FlowRun_PrimaryRecordId_map_Individu_rel</relationshipLabel>
        <relationshipName>rel_1697761221633_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716519525759_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowRun_LastExecutedElementId_map_Fl_rel</label>
        <referenceTo>ssot__FlowElement__dlm</referenceTo>
        <relationshipLabel>FlowRun_LastExecutedElementId_map_Fl_rel</relationshipLabel>
        <relationshipName>rel_1716519525759_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>